@@ -108,12 +108,12 @@ ConnectionMonitor.popupMenu.Unavailable.Action=connection-unavailable
 FolderSelectorPane.popupMenu=Select
 FolderSelectorPane.popupMenu.Select.Action=select-folder
 FolderSelectorPane.popupMenu.Select.class=net.suberic.pooka.gui.FolderMenu
-MessageNotificationManager.popupMenu=NewMessage:OpenMessage:ClearStatus:Preferences:Start:Exit
+MessageNotificationManager.popupMenu=NewMessage:ClearStatus:Preferences:Start:Exit
 MessageNotificationManager.popupMenu.NewMessage.Action=message-new
 MessageNotificationManager.popupMenu.OpenMessage.Action=message-open
 MessageNotificationManager.popupMenu.OpenMessage.class=net.suberic.pooka.gui.RecentMessageMenu
 MessageNotificationManager.popupMenu.ClearStatus.Action=status-clear
-MessageNotificationManager.popupMenu.Preferencese.Action=file-preferences
+MessageNotificationManager.popupMenu.Preferencese.Action=edit-preferences
 MessageNotificationManager.popupMenu.Start.Action=file-start
 MessageNotificationManager.popupMenu.Exit.Action=file-exit
 
