@@ -1,3 +1,6 @@
+updated TrayIcon settings; we now get a nicer dialog for opening new 
+messages.
+
 overhaul of settings UI.
 
 Pooka now uses system browser by default for URLs.
